demo/traefik-v2/k8s/whoami/03_ingress_route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`testIngressRoute.docker.localhost`)
    kind: Rule
    services:
    - name: whoami
      port: 80
